Fixed scrollbar spacing

--- a/credmark-website/styles/globals.css
+++ b/credmark-website/styles/globals.css
@@ -80,7 +80,8 @@ background: linear-gradient(130deg, rgba(247,181,0,0.07) 0%, rgba(182,32,224,0.0
 .simplebar-track.simplebar-vertical {
   right: 50px;
   width: 15px !important;
-  padding-top: 60px;
+  margin-top: 60px;
+  margin-bottom: 60px;
   filter: drop-shadow(2px 0px 4px #999999);
 }
 
